--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:blochberger/QRCodeReader.git
 [submodule "Dependencies/QRCode"]
 	path = Dependencies/QRCode
-	url = https://github.com/aschuch/QRCode.git
+	url = git@github.com:blochberger/QRCode.git
